--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,112 @@
-.App {
-  text-align: center;
+*{
+  /* Graphik,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Fira Sans","Droid Sans","Helvetica Neue",sans-serif; */
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+a{
+  text-decoration: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.restaurants-container{
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  flex-direction: row;
+  flex-wrap: wrap;
+  max-width: 80rem;
+  margin:0 auto;
+  margin-top: 2rem;
+  /* justify-content: center; */
+}
+
+.restaurants{
+  width: 20rem;
+  max-height: 20rem;
+  border-radius: 0.6rem;
+  padding: 10px;
+  border:0.1px solid transparent;
+  position: relative;
+  margin-top: 10px;
+  cursor: pointer;
+}
+
+.restaurants:hover{
+  border:0.1px solid rgb(238, 236, 236);
+  box-shadow: 0px 0px 5px 5px rgb(228, 224, 224);
+}
+
+.restaurants-image-container{
+  width: 100%;
+  max-height: 10rem;
+  position: relative;
+}
+
+.restaurants-image{
+  object-fit: cover;
+  width: 100%;
+  height: 10rem;
+  border-radius: 0.6rem;
+}
+
+.restaurants-name-container{
+  display: flex;
+  margin-top: 10px;
+  justify-content: space-between;
+}
+
+.restaurants-ratings{
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+
+.search-container{
+  display: flex;
+  justify-content: center;
+  margin-top: 10px;
+}
+
+.search-items{
+  padding: 10px;
+  border:0.1px solid rgb(238, 236, 236);
+  box-shadow: 0px 0px 10px 1px rgb(228, 224, 224);
+  border-radius: 1rem;
+}
+
+button , select, input{
+  border: none;
+}
+
+button,select{
+  width: 5rem;
+}
+
+input{
+  width: 20rem;
+}
+
+#btn_search{
+  background-color: rgb(187, 54, 240);
+  color: #fff;
+  height: 100%;
+  border-radius: 1rem;
+}
+
+input:focus,select:focus{
+  outline: none;
+}
+
+.special_items{
+  width: 100%;
+  overflow:hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+.restaurants-offer-container{
+  position: absolute;
+  bottom: 8%;
+  width: 75px;
+  background-color: red;
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
