--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,7 @@ a{
   max-width: 80rem;
   margin:0 auto;
   margin-top: 2rem;
-  /* justify-content: center; */
+  justify-content: space-evenly;
 }
 
 .restaurants{
